--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-* linguist-vendored
-*.py linguist-vendored=false
+*.html linguist-vendored
+
 # Custom for Visual Studio
 *.cs     diff=csharp
 
